<resources>
    <string name="app_name">My contacts</string>
    <string name="empty_body">Bo\'sh natija qayti. Iltimos qo\'llab-quvvatlash markaziga habar bering!</string>
    <string name="textDiscountAll">Все</string>
    <string name="textSigUp">Регистрация</string>
    <string name="textSigIn">Войти</string>
    <string name="textChange">Изменить</string>
    <string name="textSend">Отправить</string>
    <string name="textName">Имя</string>
    <string name="textSurname">Фамилия</string>
    <string name="textPhoneNumber">Телефон</string>
    <string name="textPassword">Пароль</string>
    <string name="textPasswordRepeat">Подтверждение пароля</string>
    <string name="textEnterName">Имя</string>
    <string name="textEnterSurname">Фамилия</string>
    <string name="textEnterPhoneNumber">Телефон</string>
    <string name="textEnterPassword">Пароль</string>
    <string name="textEnterPasswordRepeat">Подтверждите Пароль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_998977777777">+998977777777</string>
    <string name="verificationInfo">успех! пожалуйста, введите код , каторый мы вам отправили.</string>
    <string name="textEnterCode">Код</string>
    <string name="_01_00">01:00</string>
    <string name="text_news_item_date">13 Nov 2020</string>
    <string name="basket">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="todo">todo</string>
    <string name="cancel">cancel</string>
    <string name="contact_phone_number">phone number</string>
    <string name="contact_name">first name</string>
    <string name="edit">редактировать</string>
    <string name="delete">удалить</string>
    <string name="add">add</string>
    <string name="addContact">Добавить контакт</string>
    <string name="editProfile">Редактировать профиль</string>
    <string name="addd">Добавить</string>
    <string name="cancel1">Отмена</string>
    <string name="textForgotPassword">Забыли пароль</string>
    <string name="contacts">Контакты</string>
    <string name="settings">Настройки</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="reset">сброс</string>

</resources>