<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="uz.xsoft.restapi.viewModels.main.SignUpViewModel" />

        <variable
            name="textWatcher"
            type="uz.xsoft.restapi.utils.TextWatchers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:layout_constraintBottom_toTopOf="@id/inputLayout1"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/textEnterName"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="20"
                android:padding="16dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp"
                app:textWatcher="@{textWatcher.nameTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout1"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:layout_constraintBottom_toTopOf="@id/inputLayout2"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEnterSurname"
                android:inputType="text"
                android:maxLength="20"
                android:padding="16dp"
                android:textSize="18sp"
                app:textWatcher="@{textWatcher.surNameTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout2"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:layout_constraintBottom_toTopOf="@id/inputLayout3"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout1">

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEnterPhoneNumber"
                android:inputType="phone"
                android:padding="16dp"
                android:textSize="18sp"
                app:mask="+998 ## ### ## ##"
                app:notMaskedSymbol="#"
                app:textWatcherMask="@{textWatcher.phoneTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout3"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:layout_constraintBottom_toTopOf="@id/inputLayout4"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout2"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEnterPassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="16dp"
                android:textSize="18sp"
                app:textWatcher="@{textWatcher.passwordTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout4"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:layout_constraintBottom_toBottomOf="@id/line3"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout3"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/textEnterPasswordRepeat"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="16dp"
                android:textSize="18sp"
                app:textWatcher="@{textWatcher.repeatPasswordTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_reg_bt"
            android:onClick="@{()->viewModel.btSignUp()}"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorBtSignUpText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:apiStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>