<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="textWatcher"
            type="uz.xsoft.restapi.utils.TextWatchers" />

        <variable
            name="viewModel"
            type="uz.xsoft.restapi.viewModels.main.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout1"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/inputLayout2"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread">

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEnterPhoneNumber"
                android:inputType="phone"
                android:maxLength="20"
                android:padding="16dp"
                android:textColorHint="#000"
                android:textSize="18sp"
                app:mask="+998 ## ### ## ##"
                app:notMaskedSymbol="#"
                app:textWatcherMask="@{textWatcher.loginTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout2"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#000"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toBottomOf="@id/line4"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textEnterPassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="16dp"
                android:textSize="18sp"
                app:textWatcher="@{textWatcher.loginPasswordTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:onClick="@{()->viewModel.btForgotPassword()}"
            android:focusable="true"
            android:text="@string/textForgotPassword"
            android:textColor="@color/colorRegBtBg_"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/inputLayout2"
            app:layout_constraintTop_toBottomOf="@id/inputLayout2" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line3">

            <Button
                android:id="@+id/btSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_reg_bt"
                android:onClick="@{()->viewModel.btSignIn()}"
                android:text="@string/textSigIn"
                android:textAllCaps="false"
                android:textColor="@color/colorBtSignUpText"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/status_image_sign_in"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            app:apiStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>