<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="textPhoneNumber"
            type="String" />
        <variable
            name="viewModel"
            type="uz.xsoft.restapi.viewModels.main.VerificationViewModel" />
        <variable
            name="textWatcher"
            type="uz.xsoft.restapi.utils.TextWatchers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.main.VerificationFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/logo_contact"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textInfoVerification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/verificationInfo"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/textPhoneNumberVerification"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/textPhoneNumberVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{textPhoneNumber}"
            android:textColor="@color/colorRegBtBg_"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/inputLayout"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@id/textInfoVerification" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="0dp"
            style="@style/editTextStyle"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:layout_marginTop="12dp"
            android:textColorHint="#80736D6D"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@id/textPhoneNumberVerification">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/textEnterCode"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="20"
                android:padding="16dp"
                android:selectAllOnFocus="true"
                android:textSize="18sp"
                app:textWatcher="@{textWatcher.codeVerificationTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_count_down_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_01_00"
            android:textColor="@color/colorRegBtBg_"
            app:workTimer="@{viewModel.timerWorker}"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@id/inputLayout"
             />

        <Button
            android:id="@+id/btSignInVerification"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_reg_bt"
            android:onClick="@{()->viewModel.btSignInVerification()}"
            android:text="@string/textSigIn"
            android:textAllCaps="false"
            android:textColor="@color/colorBtSignUpText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:apiStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>